<resources>
    <string name="app_name">Messenger App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_hint">Message</string>
    <string name="send_message_image">send message image</string>
    <string name="search_hint">Search</string>
    <string name="no_match_found">No match found</string>
    <string name="chat_user_image">chat user image</string>
    <string name="back_icon_chat">back icon chat</string>
    <string name="add_conversation_button">add conversation button</string>
    <string name="search_icon">search icon</string>
    <string name="search">Search</string>
    <string name="message_list_photo">message list photo</string>
    <string name="user_list_image">user list image</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="image_upload">image upload</string>
    <string name="sign_in">SIGN IN</string>
    <string name="not_registered">Not Registered?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="profile_photo">profile photo</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="what_i_do">What I do</string>
    <string name="update">Update</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="no_messages">no messages</string>
</resources>