<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AuthorizationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/authorization_photo"
        android:layout_height="@dimen/authorization_photo"
        android:layout_marginTop="@dimen/big_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar_image_placeholder"
        android:contentDescription="@string/image_upload" />

    <EditText
        android:id="@+id/nickname_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textfield_margin"
        android:width="@dimen/authorization_textfield"
        android:background="@drawable/edit_text_style"
        android:hint="@string/enter_your_nickname"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/medium_padding"
        android:width="@dimen/authorization_textfield"
        android:background="@drawable/edit_text_style"
        android:hint="@string/enter_your_password"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname_edit_text" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_margin"
        android:backgroundTint="@color/primary_button_color"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

    <android.widget.Button
        android:id="@+id/sign_up_page_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/small_button_height"
        android:layout_marginBottom="@dimen/small_padding"
        android:background="@drawable/secondary_button_background"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registration_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_padding"
        android:text="@string/not_registered"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_page_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    Hidden Registration Components Below-->

    <EditText
        android:id="@+id/profession_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/medium_padding"
        android:width="@dimen/authorization_textfield"
        android:background="@drawable/edit_text_style"
        android:hint="@string/what_i_do"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:backgroundTint="@color/primary_button_color"
        android:text="@string/sign_up"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profession_edit_text" />


</androidx.constraintlayout.widget.ConstraintLayout>